--- a/Module 10/DESCRIPTION
+++ b/Module 10/DESCRIPTION
@@ -7,12 +7,18 @@ Authors@R:
            role = c("aut", "cre"),
            email = "erict@mail.usf.edu",
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: The package will access the CoinGecko API V3 which is free to use
-and does not require an API key. The API rate is limited to 100 requests per
-minute. The API documentation can be found at https://www.coingecko.com/en/api.
-This information is current as of March 2021.
+Description: The package will access the CoinGecko API V3 which is free and
+    does not require an API key. The CoinGecko API can be found at
+    https://www.coingecko.com/en/api. Ths information is current as of
+    March 2021.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Imports: 
+    httr,
+    jsonlite,
+    stringr
+Depends: 
+    R (>= 2.10)
